--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@openzeppelin/contracts": "^5.0.0",
     "@openzeppelin/contracts-upgradeable": "^5.0.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "mysql2": "^3.6.5"
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
+    "web3": "^4.3.0"
   }
 }
